[gd_scene load_steps=24 format=3 uid="uid://bd3wkb7g5oop"]

[ext_resource type="Texture2D" uid="uid://t1jrhdi2vg3p" path="res://Image & Music/city_road.png" id="1_8kvt1"]
[ext_resource type="Script" path="res://Scenes/game_manager_5.gd" id="1_jhn20"]
[ext_resource type="Texture2D" uid="uid://b2ssm8eg3qi8x" path="res://Image & Music/TextBoxTexture.png" id="2_frh43"]
[ext_resource type="Texture2D" uid="uid://buxgxql60ip8w" path="res://Image & Music/floor.png" id="3_3y341"]
[ext_resource type="Script" path="res://Scenes/cutscene_player.gd" id="3_7qllb"]
[ext_resource type="FontFile" uid="uid://djbx7iebjxc87" path="res://Image & Music/PixelOperator8.ttf" id="3_ryand"]
[ext_resource type="Texture2D" uid="uid://uina7gstuq4m" path="res://Image & Music/godzilla.png" id="3_ywsjb"]
[ext_resource type="AudioStream" uid="uid://ym3lqha2myoa" path="res://Image & Music/Music/8 - End Theme.ogg" id="4_75bvm"]
[ext_resource type="PackedScene" uid="uid://dgfnnljlldlg6" path="res://Scenes/all_sfx.tscn" id="6_84dn0"]
[ext_resource type="PackedScene" uid="uid://bsrbmu2fhqysh" path="res://Scenes/nuclear.tscn" id="8_syr8v"]

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_3co1p"]
texture = ExtResource("1_8kvt1")
texture_region_size = Vector2i(32, 32)
0:0/0 = 0
1:0/0 = 0
2:0/0 = 0
0:1/0 = 0
1:1/0 = 0
2:1/0 = 0
0:2/0 = 0
1:2/0 = 0
2:2/0 = 0

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_qud1n"]
texture = ExtResource("3_3y341")
texture_region_size = Vector2i(32, 32)
0:0/size_in_atlas = Vector2i(2, 2)
0:0/0 = 0
0:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-32, 0, 32, 0, 32, 32, -32, 32, -32, 32.25)

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_fl4gb"]
texture = ExtResource("3_3y341")
texture_region_size = Vector2i(32, 32)
0:0/size_in_atlas = Vector2i(2, 2)
0:0/0 = 0

[sub_resource type="TileSet" id="TileSet_vhd8h"]
tile_size = Vector2i(32, 32)
physics_layer_0/collision_layer = 1
sources/1 = SubResource("TileSetAtlasSource_3co1p")
sources/3 = SubResource("TileSetAtlasSource_qud1n")
sources/4 = SubResource("TileSetAtlasSource_fl4gb")

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_d48l5"]
texture = ExtResource("3_3y341")
0:0/size_in_atlas = Vector2i(4, 4)
0:0/0 = 0

[sub_resource type="TileSet" id="TileSet_iq3w1"]
sources/0 = SubResource("TileSetAtlasSource_d48l5")

[sub_resource type="AtlasTexture" id="AtlasTexture_r33o1"]
atlas = ExtResource("3_ywsjb")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_nwhe7"]
atlas = ExtResource("3_ywsjb")
region = Rect2(32, 0, 32, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_dtryq"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_r33o1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_nwhe7")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_l0c0r"]
size = Vector2(17, 30)

[sub_resource type="Animation" id="Animation_gfkic"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("CanvasLayer/ColorRect:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(0, 0, 0, 0)]
}

[sub_resource type="Animation" id="Animation_bdwuc"]
resource_name = "startLevel"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("CanvasLayer/ColorRect:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(0, 0, 0, 1), Color(0, 0, 0, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_c1coe"]
_data = {
"RESET": SubResource("Animation_gfkic"),
"startLevel": SubResource("Animation_bdwuc")
}

[node name="gameManager5" type="Node2D"]
script = ExtResource("1_jhn20")

[node name="TileMap" type="TileMap" parent="."]
texture_filter = 1
tile_set = SubResource("TileSet_vhd8h")
format = 2
layer_0/tile_data = PackedInt32Array(1048576, 131073, 2, 1048577, 131073, 2, 1048578, 131073, 2, 1048579, 131073, 2, 1048580, 131073, 2, 1048581, 131073, 2, 1048582, 131073, 2, 1048583, 131073, 2, 1048584, 131073, 2, 1048585, 131073, 2, 1048586, 131073, 2, 1048587, 131073, 2, 1048588, 131073, 2, 1048589, 131073, 2, 1048590, 131073, 2, 1048591, 131073, 2, 1048592, 131073, 2, 1048593, 131073, 2, 1048594, 131073, 2, 1048595, 131073, 2, 1048596, 131073, 2, 1048597, 131073, 2, 1048598, 131073, 2, 1048599, 131073, 2, 1048600, 131073, 2, 1048601, 131073, 2, 1048602, 131073, 2, 1048603, 131073, 2, 1048604, 131073, 2, 1048605, 131073, 2, 1048606, 131073, 2, 1048607, 131073, 2, 1048608, 131073, 2, 1048609, 131073, 2, 1048610, 131073, 2, 1048611, 131073, 2, 1114112, 131073, 0, 1114113, 131073, 0, 1114114, 131073, 0, 1114115, 131073, 0, 1179652, 131073, 2, 1179653, 131073, 2, 1179654, 131073, 2, 1179655, 131073, 2, 1179656, 131073, 2, 1179657, 131073, 2, 1179658, 131073, 2, 1179659, 131073, 2, 1245196, 131073, 2, 1245197, 131073, 2, 1245198, 131073, 2, 1245199, 131073, 2, 1245200, 131073, 2, 1245201, 131073, 2, 1245202, 131073, 2, 1245203, 131073, 2, 1245204, 131073, 2, 1245205, 131073, 2, 1179670, 131073, 2, 1179671, 131073, 2, 1179672, 131073, 2, 1179673, 131073, 2, 1245210, 131073, 2, 1179648, 131073, 2, 1245184, 131073, 2, 1310720, 131073, 2, 1376256, 131073, 2, 1179649, 131073, 2, 1245185, 131073, 2, 1310721, 131073, 2, 1376257, 131073, 2, 1179650, 131073, 2, 1245186, 131073, 2, 1310722, 131073, 2, 1376258, 131073, 2, 1179651, 131073, 2, 1245187, 131073, 2, 1310723, 131073, 2, 1376259, 131073, 2, 1114116, 131073, 0, 1245188, 131073, 2, 1310724, 131073, 2, 1376260, 131073, 2, 1114117, 131073, 0, 1245189, 131073, 2, 1310725, 131073, 2, 1376261, 131073, 2, 1114118, 131073, 0, 1245190, 131073, 2, 1310726, 131073, 2, 1376262, 131073, 2, 1114119, 131073, 0, 1245191, 131073, 2, 1310727, 131073, 2, 1376263, 131073, 2, 1114120, 131073, 0, 1245192, 131073, 2, 1310728, 131073, 2, 1376264, 131073, 2, 1114121, 131073, 0, 1245193, 131073, 2, 1310729, 131073, 2, 1376265, 131073, 2, 1114122, 131073, 0, 1245194, 131073, 2, 1310730, 131073, 2, 1376266, 131073, 2, 1114123, 131073, 0, 1245195, 131073, 2, 1310731, 131073, 2, 1376267, 131073, 2, 1114124, 131073, 0, 1179660, 131073, 2, 1310732, 131073, 2, 1376268, 131073, 2, 1114125, 131073, 0, 1179661, 131073, 2, 1310733, 131073, 2, 1376269, 131073, 2, 1114126, 131073, 0, 1179662, 131073, 2, 1310734, 131073, 2, 1376270, 131073, 2, 1114127, 131073, 0, 1179663, 131073, 2, 1310735, 131073, 2, 1376271, 131073, 2, 1114128, 131073, 0, 1179664, 131073, 2, 1310736, 131073, 2, 1376272, 131073, 2, 1114129, 131073, 0, 1179665, 131073, 2, 1310737, 131073, 2, 1376273, 131073, 2, 1114130, 131073, 0, 1179666, 131073, 2, 1310738, 131073, 2, 1376274, 131073, 2, 1114131, 131073, 0, 1179667, 131073, 2, 1310739, 131073, 2, 1376275, 131073, 2, 1114132, 131073, 0, 1179668, 131073, 2, 1310740, 131073, 2, 1376276, 131073, 2, 1114133, 131073, 0, 1179669, 131073, 2, 1310741, 131073, 2, 1376277, 131073, 2, 1114134, 131073, 0, 1245206, 131073, 2, 1310742, 131073, 2, 1376278, 131073, 2, 1114135, 131073, 0, 1245207, 131073, 2, 1310743, 131073, 2, 1376279, 131073, 2, 1114136, 131073, 0, 1245208, 131073, 2, 1310744, 131073, 2, 1376280, 131073, 2, 1114137, 131073, 0, 1245209, 131073, 2, 1310745, 131073, 2, 1376281, 131073, 2, 1114138, 131073, 0, 1179674, 131073, 2, 1310746, 131073, 2, 1376282, 131073, 2, 1114139, 131073, 0, 1179675, 131073, 2, 1245211, 131073, 2, 1310747, 131073, 2, 1376283, 131073, 2, 1114140, 131073, 0, 1179676, 131073, 2, 1245212, 131073, 2, 1310748, 131073, 2, 1376284, 131073, 2, 1114141, 131073, 0, 1179677, 131073, 2, 1245213, 131073, 2, 1310749, 131073, 2, 1376285, 131073, 2, 1114142, 131073, 0, 1179678, 131073, 2, 1245214, 131073, 2, 1310750, 131073, 2, 1376286, 131073, 2, 1114143, 131073, 0, 1179679, 131073, 2, 1245215, 131073, 2, 1310751, 131073, 2, 1376287, 131073, 2, 1114144, 131073, 0, 1179680, 131073, 2, 1245216, 131073, 2, 1310752, 131073, 2, 1376288, 131073, 2, 1114145, 131073, 0, 1179681, 131073, 2, 1245217, 131073, 2, 1310753, 131073, 2, 1376289, 131073, 2, 1114146, 131073, 0, 1179682, 131073, 2, 1245218, 131073, 2, 1310754, 131073, 2, 1376290, 131073, 2, 1114147, 131073, 0, 1179683, 131073, 2, 1245219, 131073, 2, 1310755, 131073, 2, 1376291, 131073, 2, 1114148, 131073, 0, 1179684, 131073, 2, 1245220, 131073, 2, 1310756, 131073, 2, 1376292, 131073, 2, 1114149, 131073, 0, 1179685, 131073, 2, 1245221, 131073, 2, 1310757, 131073, 2, 1376293, 131073, 2, 1114150, 131073, 0, 1179686, 131073, 2, 1245222, 131073, 2, 1310758, 131073, 2, 1376294, 131073, 2, 1114151, 131073, 0, 1179687, 131073, 2, 1245223, 131073, 2, 1310759, 131073, 2, 1376295, 131073, 2, 1114152, 131073, 0, 1179688, 131073, 2, 1245224, 131073, 2, 1310760, 131073, 2, 1376296, 131073, 2, 1114153, 131073, 0, 1179689, 131073, 2, 1245225, 131073, 2, 1310761, 131073, 2, 1376297, 131073, 2, 1114154, 131073, 0, 1179690, 131073, 2, 1245226, 131073, 2, 1310762, 131073, 2, 1376298, 131073, 2, 1114155, 131073, 0, 1179691, 131073, 2, 1245227, 131073, 2, 1310763, 131073, 2, 1376299, 131073, 2, 1114156, 131073, 0, 1179692, 131073, 2, 1245228, 131073, 2, 1310764, 131073, 2, 1376300, 131073, 2, 1114157, 131073, 0, 1179693, 131073, 2, 1245229, 131073, 2, 1310765, 131073, 2, 1376301, 131073, 2, 1114158, 131073, 0, 1179694, 131073, 2, 1245230, 131073, 2, 1310766, 131073, 2, 1376302, 131073, 2, 1114159, 131073, 0, 1179695, 131073, 2, 1245231, 131073, 2, 1310767, 131073, 2, 1376303, 131073, 2, 1114160, 131073, 0, 1179696, 131073, 2, 1245232, 131073, 2, 1310768, 131073, 2, 1376304, 131073, 2, 1114161, 131073, 0, 1179697, 131073, 2, 1245233, 131073, 2, 1310769, 131073, 2, 1376305, 131073, 2, 1114162, 131073, 0, 1179698, 131073, 2, 1245234, 131073, 2, 1310770, 131073, 2, 1376306, 131073, 2, 1114163, 131073, 0, 1179699, 131073, 2, 1245235, 131073, 2, 1310771, 131073, 2, 1376307, 131073, 2, 851968, 131073, 2, 917504, 131073, 2, 983040, 131073, 2, 851969, 131073, 2, 917505, 131073, 2, 983041, 131073, 2, 851970, 131073, 2, 917506, 131073, 2, 983042, 131073, 2, 851971, 131073, 2, 917507, 131073, 2, 983043, 131073, 2, 851972, 131073, 2, 917508, 131073, 2, 983044, 131073, 2, 851973, 131073, 2, 917509, 131073, 2, 983045, 131073, 2, 851974, 131073, 2, 917510, 131073, 2, 983046, 131073, 2, 851975, 131073, 2, 917511, 131073, 2, 983047, 131073, 2, 851976, 131073, 2, 917512, 131073, 2, 983048, 131073, 2, 851977, 131073, 2, 917513, 131073, 2, 983049, 131073, 2, 851978, 131073, 2, 917514, 131073, 2, 983050, 131073, 2, 851979, 131073, 2, 917515, 131073, 2, 983051, 131073, 2, 851980, 131073, 2, 917516, 131073, 2, 983052, 131073, 2, 851981, 131073, 2, 917517, 131073, 2, 983053, 131073, 2, 851982, 131073, 2, 917518, 131073, 2, 983054, 131073, 2, 851983, 131073, 2, 917519, 131073, 2, 983055, 131073, 2, 851984, 131073, 2, 917520, 131073, 2, 983056, 131073, 2, 851985, 131073, 2, 917521, 131073, 2, 983057, 131073, 2, 851986, 131073, 2, 917522, 131073, 2, 983058, 131073, 2, 851987, 131073, 2, 917523, 131073, 2, 983059, 131073, 2, 851988, 131073, 2, 917524, 131073, 2, 983060, 131073, 2, 851989, 131073, 2, 917525, 131073, 2, 983061, 131073, 2, 851990, 131073, 2, 917526, 131073, 2, 983062, 131073, 2, 851991, 131073, 2, 917527, 131073, 2, 983063, 131073, 2, 851992, 131073, 2, 917528, 131073, 2, 983064, 131073, 2, 851993, 131073, 2, 917529, 131073, 2, 983065, 131073, 2, 851994, 131073, 2, 917530, 131073, 2, 983066, 131073, 2, 851995, 131073, 2, 917531, 131073, 2, 983067, 131073, 2, 851996, 131073, 2, 917532, 131073, 2, 983068, 131073, 2, 851997, 131073, 2, 917533, 131073, 2, 983069, 131073, 2, 851998, 131073, 2, 917534, 131073, 2, 983070, 131073, 2, 851999, 131073, 2, 917535, 131073, 2, 983071, 131073, 2, 852000, 131073, 2, 917536, 131073, 2, 983072, 131073, 2, 852001, 131073, 2, 917537, 131073, 2, 983073, 131073, 2, 852002, 131073, 2, 917538, 131073, 2, 983074, 131073, 2, 852003, 131073, 2, 917539, 131073, 2, 983075, 131073, 2, 852004, 131073, 2, 917540, 131073, 2, 983076, 131073, 2, 1048612, 131073, 2, 852005, 131073, 2, 917541, 131073, 2, 983077, 131073, 2, 1048613, 131073, 2, 852006, 131073, 2, 917542, 131073, 2, 983078, 131073, 2, 1048614, 131073, 2, 852007, 131073, 2, 917543, 131073, 2, 983079, 131073, 2, 1048615, 131073, 2, 852008, 131073, 2, 917544, 131073, 2, 983080, 131073, 2, 1048616, 131073, 2, 852009, 131073, 2, 917545, 131073, 2, 983081, 131073, 2, 1048617, 131073, 2, 852010, 131073, 2, 917546, 131073, 2, 983082, 131073, 2, 1048618, 131073, 2, 852011, 131073, 2, 917547, 131073, 2, 983083, 131073, 2, 1048619, 131073, 2, 852012, 131073, 2, 917548, 131073, 2, 983084, 131073, 2, 1048620, 131073, 2, 852013, 131073, 2, 917549, 131073, 2, 983085, 131073, 2, 1048621, 131073, 2, 852014, 131073, 2, 917550, 131073, 2, 983086, 131073, 2, 1048622, 131073, 2, 852015, 131073, 2, 917551, 131073, 2, 983087, 131073, 2, 1048623, 131073, 2, 852016, 131073, 2, 917552, 131073, 2, 983088, 131073, 2, 1048624, 131073, 2, 852017, 131073, 2, 917553, 131073, 2, 983089, 131073, 2, 1048625, 131073, 2, 852018, 131073, 2, 917554, 131073, 2, 983090, 131073, 2, 1048626, 131073, 2, 852019, 131073, 2, 917555, 131073, 2, 983091, 131073, 2, 1048627, 131073, 2, 852020, 131073, 2, 917556, 131073, 2, 983092, 131073, 2, 1048628, 131073, 2, 1114164, 131073, 2, 1179700, 131073, 2, 1245236, 131073, 2, 1310772, 131073, 2, 1376308, 131073, 2, 852021, 131073, 2, 917557, 131073, 2, 983093, 131073, 2, 1048629, 131073, 2, 1114165, 131073, 2, 1179701, 131073, 2, 1245237, 131073, 2, 1310773, 131073, 2, 1376309, 131073, 2, 852022, 131073, 2, 917558, 131073, 2, 983094, 131073, 2, 1048630, 131073, 2, 1114166, 131073, 2, 1179702, 131073, 2, 1245238, 131073, 2, 1310774, 131073, 2, 1376310, 131073, 2, 852023, 131073, 2, 917559, 131073, 2, 983095, 131073, 2, 1048631, 131073, 2, 1114167, 131073, 2, 1179703, 131073, 2, 1245239, 131073, 2, 1310775, 131073, 2, 1376311, 131073, 2, 852024, 131073, 2, 917560, 131073, 2, 983096, 131073, 2, 1048632, 131073, 2, 1114168, 131073, 2, 1179704, 131073, 2, 1245240, 131073, 2, 1310776, 131073, 2, 1376312, 131073, 2, 852025, 131073, 2, 917561, 131073, 2, 983097, 131073, 2, 1048633, 131073, 2, 1114169, 131073, 2, 1179705, 131073, 2, 1245241, 131073, 2, 1310777, 131073, 2, 1376313, 131073, 2, 852026, 131073, 2, 917562, 131073, 2, 983098, 131073, 2, 1048634, 131073, 2, 1114170, 131073, 2, 1179706, 131073, 2, 1245242, 131073, 2, 1310778, 131073, 2, 1376314, 131073, 2, 852027, 131073, 2, 917563, 131073, 2, 983099, 131073, 2, 1048635, 131073, 2, 1114171, 131073, 2, 1179707, 131073, 2, 1245243, 131073, 2, 1310779, 131073, 2, 1376315, 131073, 2, 852028, 131073, 2, 917564, 131073, 2, 983100, 131073, 2, 1048636, 131073, 2, 1114172, 131073, 2, 1179708, 131073, 2, 1245244, 131073, 2, 1310780, 131073, 2, 1376316, 131073, 2, 917493, 131073, 2, 983029, 131073, 2, 1048565, 131073, 2, 1114101, 131073, 2, 1179637, 131073, 0, 1245173, 131073, 2, 1310709, 131073, 2, 1376245, 131073, 2, 1441781, 131073, 2, 917494, 131073, 2, 983030, 131073, 2, 1048566, 131073, 2, 1114102, 131073, 2, 1179638, 131073, 0, 1245174, 131073, 2, 1310710, 131073, 2, 1376246, 131073, 2, 1441782, 131073, 2, 917495, 131073, 2, 983031, 131073, 2, 1048567, 131073, 2, 1114103, 131073, 2, 1179639, 131073, 0, 1245175, 131073, 2, 1310711, 131073, 2, 1376247, 131073, 2, 1441783, 131073, 2, 917496, 131073, 2, 983032, 131073, 2, 1048568, 131073, 2, 1114104, 131073, 2, 1179640, 131073, 0, 1245176, 131073, 2, 1310712, 131073, 2, 1376248, 131073, 2, 1441784, 131073, 2, 917497, 131073, 2, 983033, 131073, 2, 1048569, 131073, 2, 1114105, 131073, 2, 1179641, 131073, 0, 1245177, 131073, 2, 1310713, 131073, 2, 1376249, 131073, 2, 1441785, 131073, 2, 917498, 131073, 2, 983034, 131073, 2, 1048570, 131073, 2, 1114106, 131073, 2, 1179642, 131073, 0, 1245178, 131073, 2, 1310714, 131073, 2, 1376250, 131073, 2, 1441786, 131073, 2, 917499, 131073, 2, 983035, 131073, 2, 1048571, 131073, 2, 1114107, 131073, 2, 1179643, 131073, 0, 1245179, 131073, 2, 1310715, 131073, 2, 1376251, 131073, 2, 1441787, 131073, 2, 917500, 131073, 2, 983036, 131073, 2, 1048572, 131073, 2, 1114108, 131073, 2, 1179644, 131073, 0, 1245180, 131073, 2, 1310716, 131073, 2, 1376252, 131073, 2, 1441788, 131073, 2, 917501, 131073, 2, 983037, 131073, 2, 1048573, 131073, 2, 1114109, 131073, 2, 1179645, 131073, 0, 1245181, 131073, 2, 1310717, 131073, 2, 1376253, 131073, 2, 1441789, 131073, 2, 917502, 131073, 2, 983038, 131073, 2, 1048574, 131073, 2, 1114110, 131073, 2, 1179646, 131073, 0, 1245182, 131073, 2, 1310718, 131073, 2, 1376254, 131073, 2, 1441790, 131073, 2, 917503, 131073, 2, 983039, 131073, 2, 1048575, 131073, 2, 1114111, 131073, 2, 1179647, 131073, 0, 1245183, 131073, 2, 1310719, 131073, 2, 1376255, 131073, 2, 1441791, 131073, 2, 65535, 3, 0, 1, 3, 0, 2, 3, 0, 3, 3, 0, 4, 3, 0, 5, 3, 0, 6, 3, 0, 7, 3, 0, 8, 3, 0, 9, 3, 0, 10, 3, 0, 11, 3, 0, 12, 3, 0, 13, 3, 0, 14, 3, 0, 15, 3, 0, 16, 3, 0, 17, 3, 0, 18, 3, 0, 65534, 3, 0, 65533, 3, 0, 65532, 3, 0, 65531, 3, 0, 65530, 3, 0, 19, 4, 0, 131066, 4, 0, 131067, 4, 0, 131068, 4, 0, 131069, 4, 0, 131070, 4, 0, 131071, 4, 0, 65536, 4, 0, 65537, 4, 0, 65538, 4, 0, 65539, 4, 0, 65540, 4, 0, 65541, 4, 0, 65542, 4, 0, 65543, 4, 0, 65544, 4, 0, 65545, 4, 0, 65546, 4, 0, 65547, 4, 0, 65548, 4, 0, 65549, 4, 0, 65550, 4, 0, 65551, 4, 0, 65552, 4, 0, 65553, 4, 0, 65554, 4, 0, 65555, 4, 0)

[node name="TileMapbackground" type="TileMap" parent="TileMap"]
z_index = -2
texture_filter = 1
tile_set = SubResource("TileSet_iq3w1")
format = 2
layer_0/tile_data = PackedInt32Array(-65548, 0, 0, -65547, 0, 0, -65546, 0, 0, -65545, 0, 0, -65544, 0, 0, -65543, 0, 0, -65542, 0, 0, -65541, 0, 0, -65540, 0, 0, -65539, 0, 0, -65538, 0, 0, -65537, 0, 0, -131072, 0, 0, -131071, 0, 0, -131070, 0, 0, -131069, 0, 0, -131068, 0, 0, -131067, 0, 0, -131066, 0, 0, -131065, 0, 0, -131064, 0, 0, -131063, 0, 0, -131062, 0, 0, -131061, 0, 0, -131060, 0, 0, -131059, 0, 0, -131058, 0, 0, -131057, 0, 0, -131056, 0, 0, -131055, 0, 0, -131054, 0, 0, -131053, 0, 0, -131052, 0, 0, -131051, 0, 0, -131050, 0, 0, -131049, 0, 0, -131048, 0, 0, -131047, 0, 0, -131046, 0, 0, -131045, 0, 0, -131044, 0, 0, -131043, 0, 0, -131042, 0, 0, -131041, 0, 0, -131040, 0, 0, -131039, 0, 0, -131038, 0, 0, -131037, 0, 0, -131036, 0, 0, -131035, 0, 0, -131034, 0, 0, -131033, 0, 0)

[node name="Cutscene player" type="CharacterBody2D" parent="."]
z_index = -1
script = ExtResource("3_7qllb")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="Cutscene player"]
texture_filter = 1
sprite_frames = SubResource("SpriteFrames_dtryq")
autoplay = "default"
frame_progress = 0.338434

[node name="Area2D" type="Area2D" parent="Cutscene player"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Cutscene player/Area2D"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Cutscene player"]
position = Vector2(-3.5, 1)
shape = SubResource("RectangleShape2D_l0c0r")

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="popUp" type="NinePatchRect" parent="CanvasLayer"]
process_mode = 3
texture_filter = 1
offset_left = 106.0
offset_top = 47.0
offset_right = 1091.0
offset_bottom = 598.0
texture = ExtResource("2_frh43")
patch_margin_left = 34
patch_margin_top = 34
patch_margin_right = 34
patch_margin_bottom = 34

[node name="RichTextLabel" type="RichTextLabel" parent="CanvasLayer/popUp"]
layout_mode = 0
offset_left = 48.0
offset_top = 45.0
offset_right = 941.0
offset_bottom = 434.0
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 8
theme_override_fonts/normal_font = ExtResource("3_ryand")
theme_override_font_sizes/normal_font_size = 32
text = "
Mmm, uranium..."

[node name="Button" type="Button" parent="CanvasLayer/popUp"]
texture_filter = 1
layout_mode = 0
offset_left = 388.0
offset_top = 457.0
offset_right = 609.0
offset_bottom = 513.0
theme_override_fonts/font = ExtResource("3_ryand")
theme_override_font_sizes/font_size = 32
text = "GO!"

[node name="ColorRect" type="ColorRect" parent="CanvasLayer"]
offset_right = 1159.0
offset_bottom = 655.0
mouse_filter = 2
color = Color(0, 0, 0, 0)

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("4_75bvm")
volume_db = -10.0
autoplay = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
process_mode = 3
libraries = {
"": SubResource("AnimationLibrary_c1coe")
}

[node name="allSFX" parent="." instance=ExtResource("6_84dn0")]

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2(241, -82)
zoom = Vector2(2, 2)

[node name="Nuclear" parent="." instance=ExtResource("8_syr8v")]
z_index = -1
position = Vector2(458, -19)

[connection signal="button_down" from="CanvasLayer/popUp/Button" to="." method="_on_button_button_down"]
